--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,19 @@
        android:layout_height="300dp"
        android:background="@color/black"
        android:layout_below="@id/main_bg"
-       />
+       >
+       <com.facebook.ads.NativeAdLayout
+           android:id="@+id/native_ad_container"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical" />
+       <ProgressBar
+           android:id="@+id/progressBar"
+           style="?android:attr/progressBarStyle"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"/>
+   </FrameLayout>
 
     <LinearLayout
         android:id="@+id/middle"
