--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -34,13 +34,13 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true">
-    </RelativeLayout>
+    </FrameLayout>
 
     <GridView
         android:id="@+id/grid_view"
